refactor: change configuration and update files

--- a/locale/by/messages.json
+++ b/locale/by/messages.json
@@ -2,7 +2,7 @@
   "Directors": "Тэатральныя рэжысёры Беларусі",
   "Catalog": "Каталог",
   "Home": "На галоўную",
-  "Created": "Стварылі Оля, Каця, Мікіта",
+  "Created": "Стварылі Оля, Каця, Мікіта, Яўген",
   "Web catalog": "Вэб-каталог",
   "Theater Directors of Belarus": "«Тэатральныя рэжысёры Беларусі»",
   "director": "Рэжысёр",
@@ -16,7 +16,9 @@
   "Mikita": "Мікіта Акуліч",
   "Volha": "Вольга Грахольская",
   "Katsiaryna": "Кацярына Стаўрова",
+  "Yauheni": "Яўген Якімчук",
   "search": "Пачніце Ваш пошук...",
   "timeline title": "Кароткая біяграфія",
-  "video": "Паглядзець відэа"
+  "video": "Паглядзець відэа",
+  "photo": "Фотагалерэя"
 }
