--- a/locale/de/messages.json
+++ b/locale/de/messages.json
@@ -2,7 +2,7 @@
   "Directors": "Theaterregisseure von Belarus",
   "Catalog": "Katalog",
   "Home": "Zuhause",
-  "Created": "Erstellt von Olya, Katya, Nikita",
+  "Created": "Erstellt von Olya, Katya, Nikita, Yauheni",
   "Web catalog": "Webkatalog",
   "Theater Directors of Belarus": "«Theaterregisseure von Belarus»",
   "director": "Regisseur",
@@ -16,7 +16,9 @@
   "Mikita": "Mikita Akulich",
   "Volha": "Volha Hrakholskaya",
   "Katsiaryna": "Katsiaryna Staurova",
+  "Yauheni": "Yauheni Yakimchuk",
   "search": "Beginnen Sie Ihre Suche...",
   "timeline title": "Kurzbiographie",
-  "video": "Schauen das Video"
+  "video": "Schauen das Video",
+  "photo": "Fotogalerie"
 }
