--- a/locale/ru/messages.json
+++ b/locale/ru/messages.json
@@ -2,7 +2,7 @@
   "Directors": "Театральные режиссеры Беларуси",
   "Catalog": "Каталог",
   "Home": "На главную",
-  "Created": "Создано Олей, Катей, Никитой",
+  "Created": "Создано Олей, Катей, Никитой, Евгением",
   "Web catalog": "Веб-каталог",
   "Theater Directors of Belarus": "«Театральные режиссеры Беларуси»",
   "director": "Режиссер",
@@ -16,7 +16,9 @@
   "Mikita": "Никита Акулич",
   "Volha": "Ольга Грахольская",
   "Katsiaryna": "Екатерина Ставрова",
+  "Yauheni": "Евгений Якимчук",
   "search": "Начните Ваш поиск...",
   "timeline title": "Краткая биография",
-  "video": "Посмотреть видео"
+  "video": "Посмотреть видео",
+  "photo": "Фотогалерея"
 }
