feat: add translations to team component

--- a/locale/by/messages.json
+++ b/locale/by/messages.json
@@ -1,7 +1,7 @@
 {
   "Directors": "Тэатральныя рэжысёры Беларусі",
   "Catalog": "Каталог",
-  "Home": "На галоўную",
+  "Home": "Галоўная",
   "Created": "Стварылі Оля, Каця, Мікіта, Яўген",
   "Web catalog": "Вэб-каталог",
   "Theater Directors of Belarus": "«Тэатральныя рэжысёры Беларусі»",
@@ -14,9 +14,13 @@
   "work": "Тэатр Буйніцкага паказваў спектаклі ў гарадах і вёсках Беларусі, гастраляваў у Вільні, Мінску, Полацку, Санкт-Пецярбургу, Варшаве і іншых гарадах. Яго творчасць заклала асновы беларускага прафесійнага тэатральнага мастацтва.",
   "team number": "Зрабіла каманда №30",
   "Mikita": "Мікіта Акуліч",
+  "Mikita work": "Базавая структура і канфігурацыя праекта, ўстаноўка і настройка віджэтаў для карты і відэа, падключэнне CMS Natlify",
   "Volha": "Вольга Грахольская",
+  "Volha work": "Дызайн праекта, падключэнне і вёрстка з bootstrap ui, рэалізацыя timeline, фотагалерэі і спісу спектакляў",
   "Katsiaryna": "Кацярына Стаўрова",
+  "Katsiaryna work": "Рэалізацыя пошуку па рэжысёрам, падрыхтоўка інфармацыі і малюнкаў, рэалізацыя мультымоўнага сайта з i18next",
   "Yauheni": "Яўген Якімчук",
+  "Yauheni work": "Дадатак інфармацыі па рэжысёрам, пераклад дадзеных у JSON, падрыхтоўка прэзентацыі праекта, вёрстка",
   "search": "Пачніце Ваш пошук...",
   "timeline title": "Кароткая біяграфія",
   "video": "Паглядзець відэа",
