--- a/locale/de/messages.json
+++ b/locale/de/messages.json
@@ -14,9 +14,13 @@
   "work": "Das Buynitsky Theater zeigte Aufführungen in Städten und Dörfern von Belarus, tourte in Vilnius, Minsk, Polozk, St. Petersburg, Warschau und andere Städte. Seine Arbeit legte den Grundstein für die belarussische professionelle Theaterkunst.",
   "team number": "Erstellt von Team # 30",
   "Mikita": "Mikita Akulich",
+  "Mikita work": "Die grundlegende Struktur und Konfiguration des Projekts, Installation und Konfiguration von Widgets für Karten und Videos, CMS Natlify",
   "Volha": "Volha Hrakholskaya",
+  "Volha work": "Anwendungsdesign und -layout, Bootstrap-UI, Implementierung der Timeline- und Performanceliste, Fotogalerie",
   "Katsiaryna": "Katsiaryna Staurova",
+  "Katsiaryna work": "Implementieren eines Suchformulars, Aufbereiten von Informationen und Bildern, Implementieren einer mehrsprachigen Site mit i18next",
   "Yauheni": "Yauheni Yakimchuk",
+  "Yauheni work": "Konvertieren Sie Daten in JSON, verbessern Sie Dateninformationen, präsentieren Sie das Projekt, fügen Sie das Layout hinzu",
   "search": "Beginnen Sie Ihre Suche...",
   "timeline title": "Kurzbiographie",
   "video": "Schauen das Video",
