--- a/locale/en/messages.json
+++ b/locale/en/messages.json
@@ -13,9 +13,13 @@
   "work": "The Buynitsky Theater showed performances in towns and villages of Belarus, toured in Vilnius, Minsk, Polotsk, St. Petersburg, Warsaw and other cities. His work laid the foundations of the Belarusian professional theatrical art.",
   "team number": "Created by team #30",
   "Mikita": "Mikita Akulich",
+  "Mikita work": "The basic structure and configuration of the project, installing and configuring widgets for maps and video, CMS Natlify",
   "Volha": "Volha Hrakholskaya",
+  "Volha work": "Application design and layout, bootstrap ui, implementation of timeline and  performances list, photo gallery",
   "Katsiaryna": "Katsiaryna Staurova",
+  "Katsiaryna work": "Implementing a search form, preparing information and pictures, implementing a multilingual site with i18next",
   "Yauheni": "Yauheni Yakimchuk",
+  "Yauheni work": "Convert data to JSON, improve data information, presentation of project, add layout",
   "search": "Start Your search...",
   "timeline title": "Curriculum vitae",
   "video": "Watch the Video",
