--- a/locale/ru/messages.json
+++ b/locale/ru/messages.json
@@ -1,7 +1,7 @@
 {
   "Directors": "Театральные режиссеры Беларуси",
   "Catalog": "Каталог",
-  "Home": "На главную",
+  "Home": "Главная",
   "Created": "Создано Олей, Катей, Никитой, Евгением",
   "Web catalog": "Веб-каталог",
   "Theater Directors of Belarus": "«Театральные режиссеры Беларуси»",
@@ -14,9 +14,13 @@
   "work": "Театр Буйницкого показывал спектакли в городах и селах Беларуси, гастролировал в Вильнюсе, Минске, Полоцке, Санкт-Петербурге, Варшаве и других городах. Его творчество заложило основы белорусского профессионального театрального искусства.",
   "team number": "Сделала команда #30",
   "Mikita": "Никита Акулич",
-  "Volha": "Ольга Грахольская",
+  "Mikita work": "Базовая структура и конфигурация проекта, установка и настройка виджетов для карты и видео, подключение CMS Natlify",
+  "Volha":  "Ольга Грахольская",
+  "Volha work": "Дизайн приложения, подключение и верстка с bootstrap ui, реализация timeline, фотогалереи и списка спектаклей",
   "Katsiaryna": "Екатерина Ставрова",
+  "Katsiaryna work": "Реализация поиска по режиссерам, подготовка информации и картинок, реализация мультиязычного сайта",
   "Yauheni": "Евгений Якимчук",
+  "Yauheni work": "Дополнение информации по режиссерам, перевод данных в JSON, подготовка презентации проекта, верстка",
   "search": "Начните Ваш поиск...",
   "timeline title": "Краткая биография",
   "video": "Посмотреть видео",
